--- a/flappyBird/index.html
+++ b/flappyBird/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pong P5.js</title>
+    <title>Flappy Bird</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
-    <script src="main.js"></script>
+    <script src="./js/bird.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/pipe-pair.js"></script>
    
 </head>
 <body>
