--- a/irregular_shapes/ireggular_shapes/index.html
+++ b/irregular_shapes/ireggular_shapes/index.html
@@ -3,12 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Space Invaders P5.js</title>
+  <title>Irregular Shape P5.js</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-  <script src="player.js"></script>
-  <script src="laser.js"></script>
-  <script src="enemy.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
